--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "description": "A Vue.js project porting the Bulma Framework into Vue Components",
   "main": "src/index.js",
-  "scripts": {},
+  "scripts": {
+      "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+      "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/michaeldscherr/vue-bulma.git"
@@ -19,5 +22,22 @@
     "url": "https://github.com/michaeldscherr/vue-bulma/issues"
   },
   "homepage": "https://github.com/michaeldscherr/vue-bulma#readme",
-  "dependencies": {}
+  "dependencies": {
+      "vue": "^2.1.0"
+  },
+  "devDependencies": {
+      "babel-core": "^6.0.0",
+      "babel-loader": "^6.0.0",
+      "babel-preset-es2015": "^6.0.0",
+      "babel-preset-stage-2": "^6.22.0",
+      "cross-env": "^3.0.0",
+      "css-loader": "^0.25.0",
+      "file-loader": "^0.9.0",
+      "lodash": "^4.17.4",
+      "vue-loader": "^10.0.0",
+      "vue-router": "^2.2.0",
+      "vue-template-compiler": "^2.1.0",
+      "webpack": "^2.2.0",
+      "webpack-dev-server": "^2.2.0"
+  }
 }
