--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A Vue.js project porting the Bulma Framework into Vue Components",
   "main": "src/index.js",
   "scripts": {
-      "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
-      "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "./node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -23,21 +24,26 @@
   },
   "homepage": "https://github.com/michaeldscherr/vue-bulma#readme",
   "dependencies": {
-      "vue": "^2.1.0"
+    "jasmine-core": "^2.5.2",
+    "karma-chrome-launcher": "^2.0.0",
+    "vue": "^2.1.0"
   },
   "devDependencies": {
-      "babel-core": "^6.0.0",
-      "babel-loader": "^6.0.0",
-      "babel-preset-es2015": "^6.0.0",
-      "babel-preset-stage-2": "^6.22.0",
-      "cross-env": "^3.0.0",
-      "css-loader": "^0.25.0",
-      "file-loader": "^0.9.0",
-      "lodash": "^4.17.4",
-      "vue-loader": "^10.0.0",
-      "vue-router": "^2.2.0",
-      "vue-template-compiler": "^2.1.0",
-      "webpack": "^2.2.0",
-      "webpack-dev-server": "^2.2.0"
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "karma": "^1.4.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-webpack": "^2.0.2",
+    "lodash": "^4.17.4",
+    "vue-loader": "^10.0.0",
+    "vue-router": "^2.2.0",
+    "vue-template-compiler": "^2.1.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0"
   }
 }
